objects/Metric__c.object
<CustomObject>
    <description>It will maintain the Details (Input/Output) of individual Metric.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Achievement_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the Metric is not Boolean thn its a Value (Percent or Number)</description>
        <label>Achievement Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Incentive__c</fullName>
        <description>If Incentive allocated for the Metric</description>
        <label>Allocated Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attachment_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boolean_Achievement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Actual Achievement is boolean value</description>
        <label>Boolean Achievement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boolean_Metric_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Metric Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enter_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enter Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Submission_Count__c</fullName>
        <label>File Submission Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Submitted_By_Email__c</fullName>
        <description>File Submitted by Email, holds partner user&apos;s email address.</description>
        <label>File Submitted By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goal_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Goal is achieved for this Metric</description>
        <label>Goal Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Amount__c</fullName>
        <description>% Incetive associated with this Metric</description>
        <label>Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Resubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metric_Description__c</fullName>
        <label>Metric Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Input_Type__c</fullName>
        <description>It defines the group of Users who can input the value for Metric</description>
        <label>Metric Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual SunPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Max_Value__c</fullName>
        <label>Metric Max Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Min_Value__c</fullName>
        <label>Metric Min Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Tier_Relation__c</fullName>
        <description>Available Metric Master detail</description>
        <label>Metric Tier Relation</label>
        <referenceTo>Metric_Tier_Relation__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overriden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overriden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_of_composite_incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Metric is part of Composite Metric</description>
        <label>Part of composite incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Metric_SR2B__c</fullName>
        <formula>Metric_Tier_Relation__r.Performance_Metric__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Metric SR2B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Metric</label>
        <referenceTo>Performance_Metric__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stay_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stay Tier</label>
        <type>Checkbox</type>
    </fields>
    <label>Metric</label>
    <nameField>
        <displayFormat>Metric-{0000000}</displayFormat>
        <label>Metric Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>